# tree-sitter-nginx

./: Cargo.toml  grammar.js  package.json
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
